# Inertia

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  format.sh  test.txt
Inertia/: CMakeLists.txt  README.md
Inertia/include/Assembly/: ASMPrinter.hpp
Inertia/include/Assembly/x86/: x86ASMPrinter.hpp
Inertia/include/Inertia/: Version.hpp.in
Inertia/include/Inertia/Assembly/: ASMPrinter.hpp  Assembler.hpp
Inertia/include/Inertia/Assembly/AArch64/: AArch64ASMPrinter.hpp
Inertia/include/Inertia/Assembly/Generic/: ASMPrinterGen.hpp
Inertia/include/Inertia/Assembly/x86/: x86ASMPrinter.hpp
Inertia/include/Inertia/CLI/: InrCLI.hpp  InrRun.hpp
Inertia/include/Inertia/Compiler/: Flags.hpp
Inertia/include/Inertia/Debug/: DebugInfo.hpp
Inertia/include/Inertia/Definition/: Defines.hpp
Inertia/include/Inertia/ELF/: ELFWriter.hpp
Inertia/include/Inertia/IR/: Block.hpp  Frame.hpp  Function.hpp  IRBuilder.hpp  IRKeywords.def  IRKeywords.hpp  IRParser.hpp  IRPrinter.hpp  Instruction.hpp  Type.hpp
Inertia/include/Inertia/Lexer/: Lexer.hpp  LexerConfig.hpp  TokenExpect.hpp  TokenStream.hpp
Inertia/include/Inertia/Lowering/: InstrSelMan.hpp  Lowered.hpp  LoweredOut.hpp  RegisterAlloc.hpp
Inertia/include/Inertia/Lowering/AArch64/: InstrSelAArch64.hpp
Inertia/include/Inertia/Lowering/Generic/: InstrSelGen.hpp
Inertia/include/Inertia/Lowering/x86/: InstrSelx86.hpp
Inertia/include/Inertia/Mem/: Allocator.hpp  Arenalist.hpp  Arenalloc.hpp  Memutils.h
Inertia/include/Inertia/Pass/: Pass.hpp  PassManager.hpp
Inertia/include/Inertia/Process/: Process.hpp
Inertia/include/Inertia/String/: InrStr.hpp  TreeString.hpp  constStr.hpp
Inertia/include/Inertia/Support/: extint.hpp
Inertia/include/Inertia/Utils/: Pow2Int.hpp
Inertia/lib/Inertia/Assembly/: ASMPrinter.cpp
Inertia/lib/Inertia/Assembly/x86/: x86ASMPrinter.cpp
Inertia/lib/Inertia/CLI/: InrCLI.cpp  InrRun.cpp
Inertia/lib/Inertia/ELF/: ELFWriter.cpp
Inertia/lib/Inertia/IR/: IRParser.cpp  IRPrinter.cpp
Inertia/lib/Inertia/Lowering/: InstrSelMan.cpp
Inertia/lib/Inertia/Lowering/x86/: InstrSelx86.cpp
Inertia/lib/Inertia/Support/: extint.cpp
Inertia/src/: main.cpp
Inertia/tools/: inrir.cpp
cmake/: InertiaVersion.cmake
examples/: another.cpp  inertia  inertia.S  inertia.inr  output.S  outputnoPIC.S  represent.inr
include/Inertia/AST/: ASTNode.hpp
include/Inertia/Codegen/: ASMFormat.hpp  Assembly.hpp  Codegen.hpp
include/Inertia/ELF/: ELFNamespace.hpp  ELFWriter.hpp  InertiaELF.hpp
include/Inertia/INB/: INBWriter.hpp
include/Inertia/IR/: Frame.hpp  Function.hpp  IRKeywords.def  IRKeywords.hpp  IRNode.hpp  IRParser.hpp  Instruction.hpp  Type.hpp
include/Utils/: DynInt.hpp  Pow2Int.hpp
inr/: CMakeLists.txt  README.md
inr/example/: module_example.inr  module_example.mir  module_example.s
inr/include/inr/: PassManager.h  README.md
inr/include/inr/ADT/: ArrView.h  BigInt.h  Container.h  FileHandle.h  IList.h  IVector.h  README.md  StrView.h  Vector.h
inr/include/inr/CodeGen/DAG/: DAGNode.hpp  DAGPrinter.hpp  Pattern.hpp  SelectionDAG.hpp
inr/include/inr/DAG/: DAGNode.h  README.md  SelectionDAG.h
inr/include/inr/Defines/: APIs.hpp  Attribute.hpp  ClassList.hpp  CommonTypes.hpp  FileDef.hpp  inrapis.hpp  inrattribute.hpp  inrclasslist.hpp  inrfiledef.hpp
inr/include/inr/IR/: Argument.h  Block.h  Constant.h  Context.h  Context.hpp  Function.h  Instruction.h  Module.h  README.md  Runner.h  Type.h  Type.hpp  Value.h  Verifier.h  inrcontext.hpp  inrtype.hpp
inr/include/inr/ISel/: LinearISel.h  TargetTree.h
inr/include/inr/ISel/x86/: LinearISelPass.h  TargetTree.h  Targetx86.ing  x86Tree.inc  x86Tree.ing
inr/include/inr/MC/: MCELFWriter.hpp  MCOBJ.hpp  MCWriter.hpp
inr/include/inr/MIR/: MachineBlock.h  MachineFunction.h  MachineInst.h  MachineModule.h  MachineOperand.h  README.md  Register.h
inr/include/inr/Option/: Arg.h  ArgList.h  Option.h  OptionTable.h  README.md
inr/include/inr/Platform/: POSIX.h  Platform.h  Standard.h  Unified.h
inr/include/inr/Support/: Alloc.hpp  Arena.hpp  Binary.hpp  BitVector.hpp  Buf.hpp  Builtin.h  Byte.hpp  CFile.h  Cexpr.hpp  Compiler.h  Endian.hpp  File.hpp  Int.hpp  Iterator.hpp  Logger.h  Map.hpp  MemoryFile.h  Misc.hpp  Ptr.hpp  README.md  Stream.h  Stream.hpp  String.h  String.hpp  StringRef.hpp  Terminal.h  Vector.hpp  Version.h  inralloc.hpp  inrarena.hpp  inrbinary.hpp  inrbuf.hpp  inrbyte.hpp  inrcexpr.hpp  inrendian.hpp  inrfile.hpp  inrint.hpp  inriterator.hpp  inrmap.hpp  inrptr.hpp  (+2 more)
inr/include/inr/TIR/: README.md  TIRBlock.h  TIRFunction.h  TIRInstruction.h  TIRModule.h
inr/lib/: CMakeLists.txt  README.md
inr/lib/IR/: CMakeLists.txt  Context.cpp  Function.cpp  Instruction.cpp  MachineInst.cpp  MachineModule.cpp  Module.cpp  Runner.cpp  Type.cpp  Value.cpp  Verifier.cpp  inrcontext.cpp
inr/lib/ISel/: LinearISel.cpp  TargetTree.cpp
inr/lib/ISel/x86/: LinearISelPass.cpp  TargetTree.cpp  x86Tree.ing
inr/lib/MC/: CMakeLists.txt  MCELFWriter.cpp
inr/lib/Option/: Args.cpp
inr/lib/Platform/: CMakeLists.txt  Unified.cpp
inr/lib/Support/: Alloc.cpp  BigInt.cpp  CMakeLists.txt  File.cpp  Int.cpp  Logger.cpp  Stream.cpp  Terminal.cpp  Version.cpp  inralloc.cpp  inrfile.cpp  inrint.cpp  inrstream.cpp
inr/test/: BigIntTest.cpp  CMakeLists.txt  Container.cpp  LoggerTest.cpp  ModuleTest.cpp  RegtableTest.cpp  Stream.cpp  StreamTest.cpp  TargetTreeTest.cpp  Vector.cpp  allocator_test.cpp  bitvec_test.cpp  container_test.cpp  dag_test.cpp  inrarena_test.cpp  inrctx_test.cpp  inrint_test.cpp  inristr_test.cpp  inrmemf_test.cpp  inrptr_test.cpp  inrseek_test.cpp  map_test.cpp  mcelf_test.cpp  stream_test.cpp  strref_test.cpp
inr/test/resources/: filetest.txt
inr/tools/: CMakeLists.txt  inr-gen.cpp
inrcc/: CMakeLists.txt  README.md
inrcc/include/inrcc/Driver/: Defaults.hpp  Linker.hpp  LinkerBuilder.hpp  Presets.hpp
inrcc/lib/inrcc/Driver/: Defaults.cpp  Linker.cpp  LinkerBuilder.cpp  Presets.cpp
inrcc/tools/driver/: inrcc.cpp  inrcc_main.cpp
src/: main.cpp
(+31 files in other folders)
